--- a/ERPConnect.API/appsettings.json
+++ b/ERPConnect.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=ERPConnect.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
